--- a/Cargo.toml
+++ b/Cargo.toml
@@ -15,3 +15,6 @@ color-eyre = "0.6.3"
 crossterm = "0.28.1"
 ratatui = "0.29.0"
 tui-input = "0.14.0"
+reqwest = { version = "0.12.25", features = ["blocking" ,"json"] }
+serde = { version = "1.0", features = ["derive"] }
+serde_json = "1.0"
