--- a/Cargo.toml
+++ b/Cargo.toml
@@ -18,3 +18,4 @@ tui-input = "0.14.0"
 reqwest = { version = "0.12.25", features = ["blocking" ,"json"] }
 serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0"
+chrono = "0.4.42"
