--- a/Cargo.toml
+++ b/Cargo.toml
@@ -19,3 +19,5 @@ reqwest = { version = "0.12.25", features = ["blocking" ,"json"] }
 serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0"
 chrono = "0.4.42"
+dirs = "6.0.0"
+ron = "0.12.0"
